# semantic-recipe-finder

./: .dockerignore  .gitattributes  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  requirements.txt
api/: index.html
app/: main.py
app/api/: health.py  routes.py  search.py
app/core/: config.py  logging.py
app/models/: recipe_card.py  recipe_detail.py  search_query.py  search_response.py
app/services/: detail_service.py  loading_service.py  search_service.py  (+1 more)
architecture/: index.html
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  health.py  routes.py  search.py
backend/app/core/: config.py  middleware.py
backend/app/models/: recipe_card.py  recipe_detail.py  search_query.py  search_response.py
backend/app/services/: data_loader.py  recipe_service.py  search_service.py
backend/app/utils/: data_preprocessor.py  ranking.py  similarity_score_calculator.py  vectorizer.py
backend/data/processed/: ids_embeddings.npy  master.parquet  metadata_embeddings.npy  vector_metadata.parquet
backend/notebooks/: data_preparation.ipynb  vectorize_metadata.ipynb
backend/tests/: conftest.py
backend/tests/integration/: test_smoke_api.py
backend/tests/unit/models/: test_recipe_detail.py
backend/tests/unit/services/: test_data_loader.py  test_recipe_service.py
backend/tests/unit/utils/: test_preprocessor.py  test_ranking.py  test_similarity.py  test_vectorizer.py
docker/: backend.Dockerfile  entrypoint-hf.sh  entrypoint.sh  frontend.Dockerfile  space.Dockerfile
docs/: api.md  architecture.md  index.md  quickstart.md  testing.md
frontend/: README.md  app.py  index.html  package-lock.json  package.json  pnpm-lock.yaml
notebooks/: data_preparing.ipynb
search/: search_index.json
tests/: conftest.py
(+39 files in other folders)
