[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "semantic-recipe-finder-api"
version = "0.1.0"
description = "Semantic Recipe Finder API."
authors = ["Hanife Kaptan <hanifekaptan.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.124.0,<0.125.0"
uvicorn = ">=0.38.0,<0.39.0"
pydantic = ">=2.12.5,<2.13.0"
python-dotenv = ">=1.2.1,<1.3.0"
pandas = ">=2.3.3,<2.4.0"
numpy = ">=2.3.5,<2.4.0"
sentence-transformers = ">=5.1.2,<6.0.0"
pyarrow = ">=22.0.0,<23.0.0"
gunicorn = { version = ">=23.0.0,<24.0.0", extras = ["standard"] }


[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
httpx = ">=0.28.1,<0.29.0"
pytest-cov = ">=7.0.0,<8.0.0"
streamlit = ">=1.52.2,<2.0.0"
